# Laborations_julius_falt_skoglund

./: main.py  pyproject.toml
datamodeling/lab_yrkesco/uppgift_0/physical_model/: docker-compose.yml  schema_smal.sql
datamodeling/lab_yrkesco/uppgift_1/: 01_create_tables.sql  02_insert_data.sql  03_queries.sql  docker-compose.yml
lab_1_data_plattform/: analytics_summary.csv  main.py  price_analytics.csv
lab_yrkesco/: readme.txt
lab_yrkesco/conceptual_model/: conceptual.ipynb
lab_yrkesco/physical_model/: docker-compose.yml  schema_smal.sql  validation.sql
programming_in_data_platform_development/lab_1/: README.md  analytics_summary.csv  main.py  price_analytics.csv
