[project]
name = "laborations-julius-falt-skoglund"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.0",
    "pandas>=3.0.0",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
]
